# nrf52832_bt_mesh

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md
CMake/: CodeCoverage.cmake  FindSparse.cmake  configure_arm.cmake  configure_hw.cmake  configure_ubsan.cmake  configure_x86.cmake  dependency_utils.cmake  mesh.lnt  pc_lint.cmake  toolchain_armcc.cmake  toolchain_gcc.cmake  toolchain_mingw.cmake
doc/: CMakeLists.txt
examples/: CMakeLists.txt  README.md  examples.emProject  nrf_mesh_sdk.c  nrf_mesh_sdk.h
examples/beaconing/: CMakeLists.txt
examples/beaconing/include/: nrf_mesh_config_app.h
examples/beaconing/src/: main.c
examples/dfu/: CMakeLists.txt
examples/dfu/src/: main.c
examples/hal/: README.md
examples/hal/include/: boards.h  custom_board.h  nordic_common.h  nrf_delay.h  nrf_gpio.h  pca10028.h  pca10031.h  pca10036.h  pca10040.h  simple_hal.h
examples/hal/src/: simple_hal.c
examples/light_control/: README.md
examples/light_control/client/: CMakeLists.txt
examples/light_control/client/include/: nrf_mesh_config_app.h  provisioner.h
examples/light_control/client/src/: main.c  provisioner.c
examples/light_control/img/: light_control_client_state_diagram.plantuml
examples/light_control/server/: CMakeLists.txt
examples/light_control/server/include/: nrf_mesh_config_app.h
examples/light_control/server/src/: main.c
examples/models/: CMakeLists.txt  README.md
examples/models/simple_on_off/: README.md
examples/models/simple_on_off/include/: simple_on_off_client.h  simple_on_off_common.h  simple_on_off_server.h
examples/models/simple_on_off/src/: simple_on_off_client.c  simple_on_off_server.c
examples/pb_remote_client/: CMakeLists.txt
examples/pb_remote_client/include/: nrf_mesh_config_app.h
examples/pb_remote_client/src/: main.c
examples/pb_remote_server/: CMakeLists.txt
examples/pb_remote_server/include/: nrf_mesh_config_app.h
examples/pb_remote_server/src/: main.c
examples/serial/: CMakeLists.txt
examples/serial/include/: nrf_mesh_config_app.h
examples/serial/src/: main.c
lib/: CMakeLists.txt
mesh/: CMakeLists.txt  cmake_defines.cmake  mbtle_src_definition.cmake
mesh/api/: access.h  access_config.h  access_publish.h  access_reliable.h  access_status.h  access_utils.h  device_state_manager.h  device_state_manager_flash.h  nrf_mesh.h  nrf_mesh_config_core.h  nrf_mesh_config_dfu.h  nrf_mesh_config_prov.h  nrf_mesh_config_serial.h  nrf_mesh_config_serial_uart.h  nrf_mesh_configure.h  nrf_mesh_defines.h  nrf_mesh_dfu.h  nrf_mesh_dfu_types.h  nrf_mesh_events.h  nrf_mesh_externs.h  nrf_mesh_node_config.h  nrf_mesh_opt.h  nrf_mesh_prov.h  nrf_mesh_serial.h  nrf_mesh_utils.h
mesh/app/: nrf_mesh_config_app.h
mesh/include/access/: access_internal.h
mesh/include/core/: aes.h  aes_hard.h  beacon.h  bearer.h  bearer_adv.h  bearer_event.h  bitfield.h  bl_if.h  bl_info_types.h  cache.h  debug_pins.h  enc.h  flash_manager.h  hal.h  internal_event.h  list.h  log.h  mesh_flash.h  msg_cache.h  msqueue.h  net_beacon.h  net_state.h  network.h  nrf_mesh_assert.h  nrf_mesh_keygen.h  packet.h  packet_buffer.h  packet_mesh.h  packet_mgr.h  radio.h  radio_config.h  rand.h  timer.h  timer_scheduler.h  timeslot.h  transport.h  utils.h
mesh/include/dfu/: dfu_types_internal.h
mesh/include/prov/: prov_beacon.h  prov_bearer.h  prov_bearer_adv.h  prov_pdu.h  prov_provisionee.h  prov_provisioner.h  prov_utils.h  provisioning.h
mesh/include/serial/: serial.h  serial_cmd.h  serial_cmd_rsp.h  serial_evt.h  serial_handler_access.h
mesh/models/config/include/: composition_data.h  config_client.h  config_messages.h  config_opcodes.h  config_server.h
mesh/models/config/src/: composition_data.c  config_client.c  config_server.c
mesh/models/pb_remote/include/: pb_remote.h  pb_remote_client.h  pb_remote_msgs.h  pb_remote_server.h  serial_pb_remote_client.h
mesh/models/pb_remote/src/: pb_remote_client.c  pb_remote_server.c
mesh/src/: nrf_mesh_weak.c
mesh/src/access/: access.c  access_publish.c  access_reliable.c  device_state_manager.c  nrf_mesh_node_config.c
mesh/src/core/: aes.c  aes_cmac.c  beacon.c  bearer.c  bearer_adv.c  bearer_event.c  enc.c  event.c  flash_manager.c  flash_manager_defrag.c  hal.c  log.c  mesh_flash.c  msg_cache.c  net_beacon.c  net_state.c  network.c  nrf_flash.c  nrf_mesh.c  nrf_mesh_keygen.c  nrf_mesh_opt.c  nrf_mesh_utils.c  packet.c  packet_buffer.c  packet_mgr.c  radio.c  radio_config.c  rand.c  timer.c  timer_scheduler.c  timeslot.c  transport.c
mesh/src/dfu/: nrf_mesh_dfu.c
mesh/src/host/: aes_soft.c
mesh/src/prov/: nrf_mesh_prov.c  prov_beacon.c  prov_bearer_adv.c  prov_provisionee.c  prov_provisioner.c  prov_utils.c  provisioning.c
mesh/src/serial/: nrf_mesh_serial.c  serial.c  serial_bearer.c  serial_handler_config.c  serial_handler_device.c  serial_handler_mesh.c  serial_handler_openmesh.c  serial_handler_prov.c  serial_uart.c
mesh/test/: CMakeLists.txt  mocks.yml  sample_data.md
mesh/test/include/: nrf_mesh_config_app.h
mesh/test/include/device_wrappers/: nrf.h  nrf51.h  nrf52.h
mesh/test/mttest/: CMakeLists.txt  mttest.c
mesh/test/src/: aes_soft.c  test_assert.c  ut_access.c  ut_beacon.c  ut_bearer_event.c  ut_bitfield.c  ut_composition_data.c  ut_config_client.c  ut_config_server.c  ut_device_state_manager.c  ut_enc.c  ut_flash_manager.c  ut_keygen.c  ut_linked_list.c  ut_mesh_flash.c  ut_msg_cache.c  ut_net_beacon.c  ut_network.c  ut_nrf_mesh.c  ut_nrf_mesh_node_config.c  ut_packet.c  ut_packet_buffer.c  ut_prov_beacon.c  ut_prov_bearer_adv.c  ut_prov_provisioning.c  ut_prov_utils.c  ut_provisioning.c  ut_radio_config.c  ut_serial_bearer_common.c  ut_serial_bearer_simple.c  ut_serial_bearer_slip_enc.c  ut_serial_handler_config.c  ut_serial_handler_device.c  ut_serial_handler_dfu.c  ut_serial_handler_mesh.c  ut_serial_handler_openmesh.c  ut_timer.c  ut_timeslot.c  ut_transport.c
si/: sdk_mesh.IAB  sdk_mesh.IAD  sdk_mesh.IMB  sdk_mesh.IMD  sdk_mesh.PFI  sdk_mesh.PO  sdk_mesh.PR  sdk_mesh.PRI
toolchain/: s110_nrf51422xxAC.ld  s110_nrf51422xxAC.sct  s130_nrf51422xxAC.ld  (+3 more)
(+46 files in other folders)
